* Worked in Dynamic data data froward for select-box and autocomplete-select-box     * Worked on internationalisation of static labels     * Worked on internationalisation from dynamic data, coming from server (such as list to render)     * Re-architect the json data to render filter component to accommodate internalisation     * Take latest pull and resolve conflicts with dev branch     * Styling added for right-to-left alignment and left-tonight alignment

--- a/web/src/components/ServiceBoard/ServiceBoard.css
+++ b/web/src/components/ServiceBoard/ServiceBoard.css
@@ -167,7 +167,7 @@
 }
 .filter-section {
   border: 10px solid;
-  padding: 3rem;
+  padding: 1rem;
   border-radius: 1rem;
 }
 .pointer-cls {
